# kakaotalk-auto-sender

./: README.md  config  kakao_sender.py  next.config.js  package-lock.json  package.json
.claude/: settings.json
airtable-test/: testA.js  testB.js  testC.js
autoworkers-script/: .gitignore  CLAUDE.md
codetax-macro/: CLAUDE.md
coupang-order-flow/: asdf.html  blog-data-remaining.json  goods_info.json  make-order-flow-with-coupang.js  order20250722-1.xlsx  order20250722-2.xlsx  order20250722-3.xlsx  order20250722-4.xlsx  order20250722-5.xlsx  order20250723-1.xlsx  order20250723-2.xlsx  order20250723-3.xlsx  order20250723-4.xlsx  order20250724-1.xlsx  order20250724-2.xlsx  order20250724-3.xlsx  order20250724-4.xlsx  order20250725-1.xlsx  order20250725-2.xlsx  order20250725-3.xlsx  order20250727-1.xlsx  order20250727-2.xlsx  order20250728-1.xlsx  order20250728-2.xlsx  order20250729-1.xlsx  order20250729-2.xlsx  order20250729-3.xlsx  order20250729-4.xlsx  order20250730-1.xlsx  order20250730-2.xlsx  order20250731-1.xlsx  order20250801-1.xlsx  order20250801-2.xlsx  order20250803-1.xlsx  order20250804-3.xlsx  order20250805-1.xlsx  order20250805-2.xlsx  (+172 more)
youtube-macro-app/worker/: .env.example  .gitignore  README.md  pyproject.toml
youtube-macro-app/worker/movie_shorts_worker/: config.py  drive.py  log.py  menubar.py  notion_client.py  poller.py  ytdlp.py
youtube-macro-app/worker/scripts/: install_launchagent.sh  oauth_setup.py
youtube-macro-app/worker/tests/: test_config.py  test_drive.py  test_log.py  test_notion_client.py  test_poller.py  test_ytdlp.py
(+731 files in other folders)
